# rusty_ray_tracer

./: .gitignore  Cargo.toml  README.md  clippy.toml  clockface.ppm  show_instrumentation.bat  show_instrumentation.ps1  travelling_projectile.ppm
.github/workflows/: benchmarking.yml  linting.yml  packaging.yml  testing.yml
benches/: example_bench.rs  tuples_bench.rs
benches/helpers/: crit_macros.rs  iai_macros.rs  mod.rs
dev/bench/: data.js
src/: lib.rs
src/asset_types/: ppm.rs
src/core3d/: array_base.rs  color.rs  color_rgb.rs  color_rgba.rs  coordinates4.rs  dot_product.rs  matrix.rs  matrix44f32.rs  matrix_rotations.rs  matrix_scaling.rs  matrix_shearing.rs  matrix_transforms.rs  matrix_translations.rs  mod.rs  point.rs  tuple.rs  tuples.rs  vector.rs
src/graphics2d/: canvas.rs
tests/: canvas_feature.rs  captures.rs  example.rs  matrices_feature.rs  transformations_feature.rs  tuples.rs  tuples_feature.rs
tests/captures/: mod.rs
tests/features/: canvas.feature  matrices.feature  transformations.feature  tuples.feature
tests/features/example/: animal.feature
