[package]
name = "rusty_ray_tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9"
derive_more = "0.99"
num = "0.4"

[dev-dependencies]
async-trait = "0.1"
cucumber = "0.18"
futures = "0.3"
log = "0.4"
# env_logger = "*"
# test-log = "0.2"

[[test]]
name = "example" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "tuples_feature" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "canvas_feature" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "matrices_feature" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest